# shorty

./: .editorconfig  .gitignore  .prettierignore  .rumdl.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  Package.swift  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  hk.pkl  justfile  mise.toml  pyproject.toml
.github/workflows/: ci.yml  preview-release.yml  release.yml
Sources/Shorty/: SettingsView.swift  ShortyApp.swift  StatusBarView.swift
Sources/ShortyCore/: AdapterRegistry.swift  AppMonitor.swift  BrowserBridge.swift  EventTapManager.swift  IntentMatcher.swift  KeyCodeMap.swift  MenuIntrospector.swift  ShortcutEngine.swift
Tests/ShortyCoreTests/: KeyComboTests.swift
app/: .swiftlint.yml  README.md  Tuist.swift  Workspace.swift
app/Shorty/: Info.plist  Project.swift  Shorty.entitlements  (+2 more)
docs/: adapter-schema.md  app-coverage-audit-execplan.md  claude-improvement-pass-execplan.md  daily-use-audit.md  daily-use-hardening-audit-execplan.md  end-user-release-execplan.md  keyboard-unifier-strategies.md  marketing-screenshots-execplan.md  menu-bar-freshness-execplan.md  menu-bar-redesign-execplan.md  monorepo-execplan.md  open-source-compliance-execplan.md  open-source.md  preview-signing-onboarding-execplan.md  release-hardening-execplan.md  semver-preview-release-execplan.md  strategy5-local-features-execplan.md  troubleshooting.md  web.md
scripts/: __init__.py
tests/: test_browser_extension.py  test_macos_fixture.py  test_release_tooling.py  test_web_static_site.py
web/: 404.html  index.html  robots.txt  sitemap.xml
(+111 files in other folders)
