[project]
name = "shorty"
version = "1.0.0"
description = "Build, validation, and web tooling for the Shorty app"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14,<3.15"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
